# Vesti

./: .env.docker.example  .gitignore  Anchor.toml  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts  twitter-image.tsx
app/dashboard/: page.tsx
components/contracts/: contract-detail-client.tsx  contract-discussion.tsx  contract-list.tsx  contract-progress.tsx  dashboard-client.tsx  new-contract-form.tsx
components/i18n/: language-toggle.tsx  locale-provider.tsx
components/layout/: app-header.tsx
components/timeline/: event-timeline.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  profile-avatar.tsx
components/wallet/: wallet-bar.tsx  wallet-provider.tsx
docs/: onchain.md  operations.md
lib/: avatar-client.ts  avatar.ts  brand-image.tsx  display-profiles.ts  site.ts  utils.ts
lib/api/: authenticated-wallet.ts  client.ts  route-helpers.ts
lib/auth/: wallet-role.ts  wallet-session.test.ts  wallet-session.ts
lib/blockchain/: anchor-encoding.test.ts  anchor-encoding.ts  escrow-adapter.test.ts  escrow-adapter.ts  mocked-escrow-adapter.ts  solana-confirmation.ts  solana-escrow-accounts.test.ts  solana-escrow-accounts.ts  solana-escrow-adapter.ts  solana-escrow-instructions.test.ts  (+4 more)
prisma/: schema.prisma  seed.ts
programs/vesti-escrow/: Cargo.toml  README.md
programs/vesti-escrow/src/: lib.rs
types/: contract.ts  event.ts  milestone.ts  profile.ts
(+84 files in other folders)
