[package]
name = "vesti-escrow"
version = "0.1.0"
description = "Vesti Solana escrow program scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesti_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
