[package]
name = "vesti-escrow"
version = "0.1.0"
description = "Vesti Solana escrow program scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesti_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
